--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- top title -->
         <div class="row">
           <div class="col text-center mt-5">
-            <h1>Not To Do List</h1>
+            <h1>Not To Do List!</h1>
             <hr />
           </div>
         </div>
